--- a/index.html
+++ b/index.html
@@ -60,12 +60,10 @@
   </section>
 </main>
 <script src="./js/main.js"></script> 
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+<footer class="footer">
+  <div class="attribution">
+    Coded by <a href="https://github.com/KevL97t">KevL97t</a>.
   </div>
-
--->
-
+</footer>
 </body>
 </html>
